--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,59 +1,3 @@
-<agm-map
-      [latitude]="coordinates.latitude"
-      [longitude]="coordinates.longitude"
-      [zoom]="14"
-      [mapTypeId]="mapType"
-    >
 
-
-      <!-- <agm-marker
-        *ngFor="let marker of markers"
-        [latitude]="marker.lat"
-        [longitude]="marker.lng"
-        [opacity]="marker.alpha"
-        [markerDraggable]="true"
-        (markerClick)="selectMarker($event)"
-      >
-      </agm-marker> -->
-
-
-      <agm-direction [origin]="origin" [destination]="destination">
-      </agm-direction>
-
-
-
-
-      <agm-marker
-        [latitude]="coordinates.latitude"
-        [longitude]="coordinates.longitude"
-      >
-      </agm-marker>
-
-      <agm-polygon 
-          [paths]="wallOfSalahAlDin" 
-          [fillColor]="Color" 
-          [strokeColor]="SColor" 
-          [strokeWeight]="SWeight" 
-          [fillOpacity]="FOpacity"
-          [strokeOpacity]="SOpacity"
-      >
-      </agm-polygon>
-
-
-      <agm-circle 
-          *ngFor="let place of placesObj"
-          [latitude]="place.lat" 
-          [longitude]="place.log" 
-          [radius]="place.radius"
-          [fillColor]="place.FColor"
-          (circleClick)="placeEvent($event, place)"
-      >
-      </agm-circle>
-
-      <!-- <agm-data-layer [geoJson]="geoJsonObject" (layerClick)="clicked($event)" [style]="styleFunc">
-      </agm-data-layer> -->
-
-</agm-map>
-
-<app-setting></app-setting>
+<app-map></app-map>
 
