--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -3,20 +3,21 @@
   <br>
   <button (click)="wallOfSalahAlDin()">Wall of Salah al-Din</button>
   <br>
-  <button (click)="direction()">Direction</button>
-  <br>
-  <button (click)="castleOfSalahAlDin()">Castle Of Salah Al-Din</button>
+  <button (click)="castleOfSalahAlDin()">Castles</button>
   <br>
   <button (click)="schools()">Schools</button>
   <br>
   <button (click)="changeTheme()">Change Theme Map</button>
-  <br>
-  <div class="data">
-    {{dataPlaceSelected}}
-  </div>
   <span (click)="openSettingFn()"></span>
 </div>
 
+
+<div class="dataViewPanel">
+  <div class="data" *ngIf="dataPlaceSelected">
+    {{dataPlaceSelected.data}}
+  </div>
+  <button (click)="direction()">Direction</button> 
+</div>
 
 <app-gmap
   [latitude] = "latitude"
