--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,7 @@ agm-map {
     position: absolute;
     background: #fff;
     top: 0;
-    right: -540px;
+    right: -500px;
     width: 500px;
     height: 500px;
     z-index: 9999;
@@ -30,22 +30,15 @@ agm-map {
 
 .settingView {
     > span {
-        width: 100px;
-        height: 20px;
+        width: 20px;
+        height: 100px;
         display: inline;
         background: red;
         position: absolute;
-        left: -100px;
+        left: -20px;
         cursor: pointer;
+        border-radius: 10px 0 0 10px;
     }
-}
-
-.data {
-    display: block;
-    background:#eaeaea;
-    padding:10px;
-    color: red;
-    font-size: 13px;
 }
 
 .viewPanel {
@@ -57,4 +50,25 @@ agm-map {
     overflow: auto;
     left: 0;
     bottom: 0;
+}
+
+.dataViewPanel {
+    position: absolute;
+    top: 0;
+    width: 40%;
+    left: calc(50% - 20%) ;
+    background: #fff;
+    z-index: 999;
+
+    .data {
+        display: block;
+        padding: 20px;
+        color:#666;
+        font-size: 13px;
+    }
+
+    button {
+        display: block;
+        width: 100%;
+    }
 }
